--- a/pages/footer.html
+++ b/pages/footer.html
@@ -29,7 +29,7 @@
 						</td>
 					</tr>
 				</table>
-				<div class="copyright">Copyright 1998-2016</div>
+				<div class="copyright">浙ICP备18013073号</div>
 			</div>
 			<div class="col-md-4">
 				<table class="qrcodes">
@@ -49,7 +49,11 @@
 	</div>
 </div>
 
-
+<script type="text/javascript">
+	// document.oncontextmenu = function(){
+ //                event.returnValue = false;
+ //            };
+</script>
 <script type="text/javascript" src="./dist/all.min.js"></script>
 	<img  style="CURSOR: pointer;    position: fixed;
     right: 0;
